<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nullcraft App</string>
    <string name="app_name_new">Nullcraft App News</string>
    <string name="action_settings">Settings</string>
    <string name="impressum">Impressum</string>
    <string name="beenden">Beenden</string>
    <string name="haupt">Hauptmenü</string>
    <string name="zuruck">Zurück</string>
    <string name="latency">Latenz</string>
    <string name="leer"></string>    <string name="news">News</string>
    <string name="ankuendigung">Ankündig- \n ungen</string>
    <string name="tech">Technik News</string>
    <string name="SStatus">Server Status</string>
    <string name="SPlayer">Spieler Online</string>
    <string name="Splayermax">Max Player</string>
    <string name="MODT">Modt</string>
    <string name="Version">Version</string>
    <string name="app_emc">Nullcraft App Notaus</string>
    <string name="wartungstext">Geplante\nWartungen:</string>
    <string name="offline">Platzhalter</string>
    <string name="copyright">©Budy93, Berlin 2014</string>
    <string name="app_discription">Diese App zeigt was auf Nullcraft aktuell alles los ist.</string>
    <string name="neuladen">Neuladen</string>
    <string name="x">X</string>
    <string name="Dynmap">Dynmap</string>
    <string name="Voten">Votelinks</string>
    <string name="Kontack">Kontakt</string>
    <string name="update">Update</string>
    <string name="update_p">Auf Aktualisierungen Prüfen</string>
    <string name="Keine_Netzwerk">Kein Netzwerk</string>
	<string name="Benutzer">Benutzername</string>
	<string name="habe_vote">Schon gevotet?</string>
	<string name="teststring">Prüfen</string>
	<string name="changelog">Changelog</string>
	<string name="lizenzen_google_gson">Lizenzen\nGoogle-Gson</string>
	<string name="title">Title</string>
	<string name="date">Date</string>
	<string name="description">Description</string>
	<string name="erinnern">Ans Voten Erinnern?</string>
	<string name="impressum_main">Impress-\num</string>
	<string name="impressum_Textview">&gt;&gt;&gt;Impressum hier berühren&lt;&lt;&lt;</string>
	<string name="gevotet_heute">Und heute schon gevotet?</string>
	<string name="craftlist">Voten auf Craftlist</string>
	<string name="serverlistNet">Voten auf minecraft-serverlist.net</string>
	<string name="serverlistEU">Voten auf minecraft-server.eu</string>
	<string name="planteminecraft">Voten auf planetminecraft</string>
	<string name="app_dynmap">Nullcraft Dynmap</string>
	<string name="app_vote">Nullcraft Voteseiten</string>
	<string name="app_impressum">Nullapp Impressum</string>
	<string name="change">Changelog</string>
</resources>