<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/emc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impressum"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/impress"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:maxLines="300000"
            android:scrollbars="vertical"
            android:text="" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/changelog"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="fill_vertical"
            android:text="@string/zuruck" />

        <android.support.v7.widget.Space
            android:id="@+id/Space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_row="1" />

        <Button
            android:id="@+id/changelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lizenz"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/back"
            android:text="@string/changelog" />

        <Button
            android:id="@+id/lizenz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/changelog"
            android:text="@string/lizenzen_google_gson" />

    </RelativeLayout>

</LinearLayout>