<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <!-- android:background="@drawable/affe" -->

    <TextView
        android:id="@+id/emc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/SStatus" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emc_text"
        android:layout_below="@+id/impresse"
        android:text="@string/SPlayer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/Splayermax" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/MODT" />

    <TextView
        android:id="@+id/impresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emc_text"
        android:layout_alignLeft="@+id/playerO"
        android:layout_alignTop="@+id/emc_text" />

    <TextView
        android:id="@+id/playerO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/impresse"
        android:layout_centerHorizontal="true"
        android:text="-" />

    <TextView
        android:id="@+id/playerM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerO"
        android:layout_below="@+id/playerO"
        android:text="-" />

    <TextView
        android:id="@+id/modtM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/playerO"
        android:text="Offline Platzhalter" />

    <TextView
        android:id="@+id/VersionM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/VersionText"
        android:layout_alignBottom="@+id/VersionText"
        android:layout_alignLeft="@+id/playerM"
        android:text="Offline Platzhalter" />

    <TextView
        android:id="@+id/VersionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/modtM"
        android:layout_marginTop="16dp"
        android:text="@string/Version" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/impress"
        android:layout_gravity="center_vertical|center_horizontal|fill_horizontal|center"
        android:layout_toLeftOf="@+id/emc_text"
        android:gravity="center_vertical|center_horizontal|fill_horizontal|center" >
    </LinearLayout>

    <Button
        android:id="@+id/Dyn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/version"
        android:layout_alignTop="@+id/Votel"
        android:layout_toRightOf="@+id/back"
        android:text="Dynmap" />

    <Button
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Dyn"
        android:layout_alignTop="@+id/Beenden"
        android:layout_toRightOf="@+id/Votel"
        android:text="Version" />

    <Button
        android:id="@+id/Votel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Beenden"
        android:layout_centerHorizontal="true"
        android:text="Votelinks" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="Neuladen"
        android:textStyle="bold" />

    <Button
        android:id="@+id/impress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Beenden"
        android:layout_toLeftOf="@+id/Votel"
        android:text="Kontakt" />

    <Button
        android:id="@+id/Beenden"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_alignLeft="@+id/impress"
        android:text="X" />

    <TextView
        android:id="@+id/latency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/VersionText"
        android:layout_below="@+id/VersionText"
        android:text="@string/latency" />

    <TextView
        android:id="@+id/latency_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latency"
        android:layout_alignBottom="@+id/latency"
        android:layout_alignLeft="@+id/VersionM"
        android:text="@string/leer" />

    <Button
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Votel"
        android:layout_alignLeft="@+id/Votel"
        android:layout_alignRight="@+id/Votel"
        android:text="@string/news" />

    <TextView
        android:id="@+id/TestURL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Beenden"
        android:layout_alignParentBottom="true"
        android:text="@string/test"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>